Add support for {document-title}

--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -158,4 +158,8 @@
     <img src="{{definition.screenshotFileName}}" />
 {{/inline}}
 
+{{#*inline "document-title"}}
+    {{~context.document.title~}}
+{{/inline}}
+
 {{~> (lookup . "marker") ~}}
