Update how pitch accent expressions are disambiguated

--- a/ext/mixed/css/display-default.css
+++ b/ext/mixed/css/display-default.css
@@ -62,6 +62,7 @@ h2 { border-bottom-color: #eeeeee; }
 
 .term-definition-list,
 .term-pitch-accent-group-list,
+.term-pitch-accent-expression-list,
 .kanji-glossary-list {
     color: #777777;
 }
