--- a/ext/mixed/css/display-dark.css
+++ b/ext/mixed/css/display-dark.css
@@ -62,6 +62,7 @@ h2 { border-bottom-color: #2f2f2f; }
 
 .term-definition-list,
 .term-pitch-accent-group-list,
+.term-pitch-accent-expression-list,
 .kanji-glossary-list {
     color: #888888;
 }
