Update settings page to display additional information

--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -235,6 +235,43 @@ html:root[data-operating-system=openbsd] [data-hide-for-operating-system~=openbs
     display: none;
 }
 
+.dict-details-container {
+    margin: 0.5em 0;
+}
+
+.dict-details-toggle-link {
+    cursor: pointer;
+}
+
+.dict-details {
+    margin-left: 1em;
+}
+
+.dict-details-table {
+    display: table;
+    width: 100%
+}
+
+.dict-details-entry {
+    display: table-row;
+}
+
+.dict-details-entry+.dict-details-entry>* {
+    padding-top: 0.25em;
+}
+
+.dict-details-entry-label {
+    display: table-cell;
+    font-weight: bold;
+    white-space: nowrap;
+    padding-right: 0.5em;
+}
+
+.dict-details-entry-info {
+    display: table-cell;
+    white-space: pre-line;
+}
+
 
 @media screen and (max-width: 740px) {
     .col-xs-6 {
