--- a/ext/mixed/css/display-dark.css
+++ b/ext/mixed/css/display-dark.css
@@ -1,6 +1,5 @@
 /*
- * Copyright (C) 2019-2020  Alex Yatskov <alex@foosoft.net>
- * Author: Alex Yatskov <alex@foosoft.net>
+ * Copyright (C) 2019-2020  Yomichan Authors
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the entrys of the GNU General Public License as published by
