--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -697,6 +697,25 @@ button.action-button {
 
 :root[data-compact-glossaries=true] .term-glossary-image-container {
     display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 1;
+}
+
+:root[data-compact-glossaries=true] .entry:nth-last-of-type(1):not(:nth-of-type(1)) .term-glossary-image-container {
+    bottom: 100%;
+    top: auto;
+}
+
+:root[data-compact-glossaries=true] .term-glossary-image-link {
+    position: relative;
+    display: inline-block;
+}
+
+:root[data-compact-glossaries=true] .term-glossary-image-link:hover .term-glossary-image-container,
+:root[data-compact-glossaries=true] .term-glossary-image-link:focus .term-glossary-image-container {
+    display: block;
 }
 
 :root:not([data-compact-glossaries=true]) .term-glossary-image-link-text {
