Anki audio download (#477)
* Update how audio is added to Anki cards

* Upgrade Anki templates

* Update comments

--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -14,7 +14,9 @@
     {{~/if~}}
 {{/inline}}
 
-{{#*inline "audio"}}{{/inline}}
+{{#*inline "audio"~}}
+    [sound:{{definition.audioFileName}}]
+{{~/inline}}
 
 {{#*inline "character"}}
     {{~definition.character~}}
