--- a/test/data/html/test-stylesheet.css
+++ b/test/data/html/test-stylesheet.css
@@ -28,7 +28,9 @@ a, a:visited {
     text-decoration: underline;
 }
 
-.test {
+.test,
+y-test {
+    display: block;
     background-color: #ffffff;
     margin: 1em 0;
     padding: 0.5em;
@@ -36,7 +38,8 @@ a, a:visited {
     border-radius: 4px;
 }
 
-.test:before {
+.test:before,
+y-test:before {
     content: "Test " counter(test-id);
     display: block;
     counter-increment: test-id;
@@ -45,7 +48,10 @@ a, a:visited {
     font-weight: bold;
 }
 
-.description {
+.description,
+y-description {
     color: #444444;
     font-style: italic;
+    display: block;
+    padding-bottom: 0.5em;
 }
