Omit the sound tag if it's empty (#525)

--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -14,9 +14,11 @@
     {{~/if~}}
 {{/inline}}
 
-{{#*inline "audio"~}}
-    [sound:{{definition.audioFileName}}]
-{{~/inline}}
+{{#*inline "audio"}}
+    {{~#if definition.audioFileName~}}
+        [sound:{{definition.audioFileName}}]
+    {{~/if~}}
+{{/inline}}
 
 {{#*inline "character"}}
     {{~definition.character~}}
