--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -68,39 +68,39 @@ html:root:not([data-options-general-result-output-mode=merge]) #dict-main-group 
     content: "AND";
 }
 
-.input-group .condition-prefix {
+.condition-prefix {
     flex: 0 0 auto;
 }
-.input-group .condition-prefix,
-.input-group .condition-group-separator-label {
+.condition-prefix,
+.condition-group-separator-label {
     width: 60px;
     text-align: center;
 }
-.input-group .condition-group-separator-label {
+.condition-group-separator-label {
     padding: 6px 12px;
     font-weight: bold;
     display: inline-block;
 }
-.input-group .condition-type,
-.input-group .condition-operator {
+.condition-type,
+.condition-operator {
     width: auto;
     text-align: center;
     text-align-last: center;
 }
 
-.condition-group>.condition>*:first-child,
+.condition-list>.condition>*:first-child,
 .audio-source-list>.audio-source>*:first-child {
     border-bottom-left-radius: 0;
 }
-.condition-group>.condition:nth-child(n+2)>*:first-child,
+.condition-list>.condition:nth-child(n+2)>*:first-child,
 .audio-source-list>.audio-source:nth-child(n+2)>*:first-child {
     border-top-left-radius: 0;
 }
-.condition-group>.condition:nth-child(n+2)>div:last-child>button,
+.condition-list>.condition:nth-child(n+2)>div:last-child>button,
 .audio-source-list>.audio-source:nth-child(n+2)>*:last-child>button {
     border-top-right-radius: 0;
 }
-.condition-group>.condition:nth-last-child(n+2)>div:last-child>button,
+.condition-list>.condition:nth-last-child(n+2)>div:last-child>button,
 .audio-source-list>.audio-source:nth-last-child(n+2)>*:last-child>button {
     border-bottom-right-radius: 0;
 }
@@ -110,7 +110,7 @@ html:root:not([data-options-general-result-output-mode=merge]) #dict-main-group 
     border-top-right-radius: 0;
 }
 
-.condition-groups>*:last-of-type {
+.condition-groups>.condition-group:last-child>.condition-group-separator-label {
     display: none;
 }
 
