--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -113,6 +113,10 @@ html:root:not([data-options-general-result-output-mode=merge]) #dict-main-group 
     display: none;
 }
 
+.condition-mouse-button[hidden] {
+    display: none;
+}
+
 .audio-source-list {
     counter-reset: audio-source-id;
 }
