--- a/ext/bg/data/anki-field-templates-upgrade-v4.handlebars
+++ b/ext/bg/data/anki-field-templates-upgrade-v4.handlebars
@@ -3,3 +3,7 @@
         <img src="{{definition.clipboardImageFileName}}" />
     {{~/if~}}
 {{/inline}}
+
+{{#*inline "clipboard-text"}}
+    {{~#if definition.clipboardText~}}{{definition.clipboardText}}{{~/if~}}
+{{/inline}}
