--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -282,4 +282,8 @@
     {{~/if~}}
 {{/inline}}
 
+{{#*inline "clipboard-text"}}
+    {{~#if definition.clipboardText~}}{{definition.clipboardText}}{{~/if~}}
+{{/inline}}
+
 {{~> (lookup . "marker") ~}}
