--- a/ext/bg/css/popup-preview.css
+++ b/ext/bg/css/popup-preview.css
@@ -16,16 +16,13 @@
  */
 
 html {
-    --text-color: #333333;
-    --background-color: #ffffff;
-    --theme-transition: background-color 0.25s linear 0s, color 0.25s linear 0s;
-    transition: var(--theme-transition);
-    background-color: var(--background-color);
-    color: var(--text-color);
+    transition: background-color 0.25s linear 0s, color 0.25s linear 0s;
+    background-color: rgba(255, 255, 255, 0);
+    color: #333333;
 }
 html.dark {
-    --text-color: #d4d4d4;
-    --background-color: #1e1e1e;
+    color: #d4d4d4;
+    background-color: #1e1e1e;
 }
 html,
 body {
@@ -99,7 +96,9 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--background-color);
+}
+.example-text-input:not([hidden])+.example-text {
+    visibility: hidden;
 }
 
 .popup-placeholder {
