--- a/ext/bg/data/default-anki-field-templates.handlebars
+++ b/ext/bg/data/default-anki-field-templates.handlebars
@@ -286,4 +286,13 @@
     {{~#if definition.clipboardText~}}{{definition.clipboardText}}{{~/if~}}
 {{/inline}}
 
+{{#*inline "conjugation"}}
+    {{~#if definition.reasons~}}
+        {{~#each definition.reasons~}}
+            {{~#if (op ">" @index 0)}} « {{/if~}}
+            {{.}}
+        {{~/each~}}
+    {{~/if~}}
+{{/inline}}
+
 {{~> (lookup . "marker") ~}}
